Add smart crash analyzer + client import tool
CrashAnalyzer detects 10+ known crash patterns (wrong Java, missing mod
dependency, duplicate mod, foreign mod from another client, OOM, mixin
failure, etc.) and shows the user a plain-language title, cause, and fix
instead of raw log output.

InstanceImporter safely copies files from Luna Client / OptiFine / any
other .minecraft folder into a LuminaMC instance: saves, screenshots,
resourcepacks, shaderpacks, fonts and backups are copied as-is; mods are
filtered by loader type (Fabric/Forge/NeoForge meta inspected inside each
jar); logs, crash-reports, coremods and native libraries are skipped.

OverviewPanel gains an Import button above the news card and a "Import
clean files" shortcut in the crash card.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>